--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Song+Myung&family=Yeon+Sung&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- og 태그  -->
+    <meta property="og:title" content="신년운세 by 세연"/>
+    <meta property="og:description" content="2021년 띠 별 운세를 알려드립니다😉"/>
+    <meta property="og:image" content="https://new-year.spartacodingclub.kr/images/ogimage.png"/>
+
+    <!-- favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
     <title>2021년 신년 운세!</title>
+
+    <script type="text/javascript" src="https://new-year.spartacodingclub.kr/newyear.js"></script>
+
     <style>
         * {
             font-family: 'Song Myung', serif;
@@ -118,6 +130,30 @@
         .rtan12 {
             background-image: url('https://new-year.spartacodingclub.kr/images/yearS12.png');
         }
+
+        /* 모바일 버전 */
+        @media screen and (max-width: 780px)  {
+ 
+            body {
+                background-position: 70px -70px;
+                background-size: 500px;
+            }
+
+            .rtans{
+                width: 100%; /* 화면 크기에 꽉 맞게 */
+            }
+
+            .mytitle{
+                margin-top: 20px;
+                margin-bottom: 20px;
+            }
+
+            /* hover 태그 필요없으니까 처음부터 동물 이름 보이게*/
+            .rtans > a{
+                color: darkred;
+            }
+
+        }
     </style>
 </head>
 
@@ -128,18 +164,18 @@
     </div>
 
     <div class="rtans">
-        <a class="rtan1" href="result.html">쥐</a>
-        <a class="rtan2" href="#">소</a>
-        <a class="rtan3" href="#">호랑이</a>
-        <a class="rtan4" href="#">토끼</a>
-        <a class="rtan5" href="#">용</a>
-        <a class="rtan6" href="#">뱀</a>
-        <a class="rtan7" href="#">말</a>
-        <a class="rtan8" href="#">양</a>
-        <a class="rtan9" href="#">원숭이</a>
-        <a class="rtan10" href="#">닭</a>
-        <a class="rtan11" href="#">개</a>
-        <a class="rtan12" href="#">돼지</a>
+        <a class="rtan1" href="result.html?year=1">쥐</a>
+        <a class="rtan2" href="result.html?year=2">소</a>
+        <a class="rtan3" href="result.html?year=3">호랑이</a>
+        <a class="rtan4" href="result.html?year=4">토끼</a>
+        <a class="rtan5" href="result.html?year=5">용</a>
+        <a class="rtan6" href="result.html?year=6">뱀</a>
+        <a class="rtan7" href="result.html?year=7">말</a>
+        <a class="rtan8" href="result.html?year=8">양</a>
+        <a class="rtan9" href="result.html?year=9">원숭이</a>
+        <a class="rtan10" href="result.html?year=10">닭</a>
+        <a class="rtan11" href="result.html?year=11">개</a>
+        <a class="rtan12" href="result.html?year=12">돼지</a>
     </div>
 </body>
 
